# typedschema

./: .gitignore  Makefile  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  typedschema.html
_modules/: functools.html  index.html
_modules/typedschema/: codegen.html  column.html  schema.html  table.html
docs/: index.rst
docs/snippets/: examples-set-ops-no-superset-missing-col.py  examples-set-ops-nullable.py  schema-diff-df.show.txt  schema-diff.print.txt
examples/: tour.py
src/typedschema/: column.py  schema.py
